--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,114 @@
 @import "bootstrap-sprockets";
-
 @import "bootstrap";
+
+/* ------------------------------ */
+/* Basic Setup */
+/* ------------------------------ */
+
+* {
+	margin: 0px;
+	padding: 0px;
+	box-sizing: border-box;
+}
+
+html {
+  color: #454545;
+  font-family: 'Lato', 'Arial', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+}
+
+.clearfix {zoom: 1;}
+.clearfix:after {
+  content: '.';
+  clear: both;
+  display: block;
+  height: 0;
+  visibility: hidden;
+}
+
+
+/* ------------------------------ */
+/* Reusable Components */
+/* ------------------------------ */
+
+h1, h2, h3, h4 {
+	-webkit-font-smoothing:antialiased;
+	text-rendering: optimizelegibility;
+	font-weight: 300;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 240%;
+  word-spacing: 4px;
+  letter-spacing: 1px;
+	text-align: center;
+}
+
+h2 {
+  font-size: 180%;
+  text-align: center;
+  word-spacing: 2px;
+  margin-bottom: 15px;
+  letter-spacing: 1px;
+}
+
+h3 {
+  font-size: 130%;
+  margin-bottom: 15px;
+}
+
+.list-well h4 {
+	font-size: 105%;
+}
+
+a {
+	color: #4b96ad;
+}
+
+a:link,
+a:visited {
+	color: #4b96ad;
+}
+
+a:hover,
+a:active,
+a:focus {
+ 	color: #4b96ad;
+ 	text-decoration: underline;
+}
+
+.spacer {
+	font-size: 70%;
+}
+
+.center {
+  text-align: center;
+}
+
+.btn-white-text:link,
+.btn-white-text:visited {
+    color: #fff;
+}
+
+/* ------------------------------ */
+/* Misc */
+/* ------------------------------ */
+
+.well {
+	border: 1px solid #4b96ad;
+}
+
+input, textarea, select, .uneditable-input {
+	border: 1px solid #333333;
+	border-radius: 5px;
+	width: 100%;
+	margin-bottom: 15px;
+}
+
+input {
+	height: auto !important;
+}
