--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Workspace" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "Fit Quest" %></title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag "application", :media => "all" %>
@@ -45,12 +45,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Workspace</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <% if signed_in? %>
+        <%= link_to "Fit Quest", home_path, class: "navbar-brand"  %>
+        <% else %>
+        <%= link_to "Fit Quest", root_path, class: "navbar-brand"  %>
+        <% end %>
+        <div class="navbar-collapse collapse navbar-responsive-collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
+            <li><%= link_to "Tasks", tasks_path  %></li>
             <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <% if signed_in? %>
+            <li><%= link_to "Sign Out", destroy_user_session_path  %></li>
+            <% else %>            
+            <li><%= link_to "Sign In", new_user_session_path  %></li>
+            <% end %>
           </ul>
         </div>
       </div>
