--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 <%= render 'shared/errors', obj: @task %>
 
 <div class="row">
-    <div class="col-md-6 well">
+    <div class="col-md-6 well col-md-offset-3">
         <h4>Enter Task Information:</h4>
         <%= form_for @task do |f| %>
             <%= f.label :task_name, "Task Name:" %>
