--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 <h1>All Tasks</h1>
 <hr/>
-<div class="center">
-<%= link_to "Enter New Tasks", new_task_path, class: "center btn btn-primary btn-white-text" %>
+<div class="">
+<%= link_to "Enter New Tasks", new_task_path, class: "btn btn-primary btn-white-text" %>
 </div>
 <br>
 <% @tasks.each do |task| %>
@@ -10,14 +10,14 @@
     <div class="row">
         
        
-        <div class="col-md-6">
-            <h4>Task Name: <%= task.task_name %></h4>
+        <div class="col-xs-6">
+            <h4><%= task.task_name %></h4>
         </div>
-        <div class="col-md-3">
-            <h4>Task Points: <%= task.task_points %></h4>
+        <div class="col-xs-3">
+            <h4>Points: <%= task.task_points %></h4>
         </div>
-        <div class="col-md-3">
-            <%= link_to "Edit Task", edit_task_path(task), class: "center btn btn-warning" %>
+        <div class="col-xs-3">
+            <%= link_to "Edit Task", edit_task_path(task), class: "center btn btn-warning btn-white-text" %>
         </div>
         <br>
         <br><hr />
