--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -12,7 +12,7 @@
   Level: <%= @user.level %><br>
   XP: <%= @user.xp %><br>
   Health: <%= @user.health %><br>
-  Mana: <%= @user.mana %><br>
+  <!-- Mana: <%= @user.mana %><br> -->
   Attack: <%= @user.attack %><br>
   Defense: <%= @user.defense %><br>
 </div>
