--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,11 +13,11 @@
     <div class="row">
         
        
-        <div class="col-xs-6">
-            <h4><%= task.task_name %></h4>
+        <div class="col-xs-4">
+            <p><%= task.task_name %></p>
         </div>
-        <div class="col-xs-2">
-            <h4>Points: <%= task.task_points %></h4>
+        <div class="col-xs-4">
+            <p>Points: <%= task.task_points %></p>
         </div>
         <div class="col-xs-4">
             <%= form_tag complete_path(task, @user) do %>
